--- a/views/resep.hbs
+++ b/views/resep.hbs
@@ -1,6 +1,15 @@
 <div class="container">
+    <center><h3 style="font-weight:bold">{{judul}}</h3></center><br/>
+
         <div class="jumbotron">
             <form action="/" method="POST" class="form-horizontal">
+
+                <div class="form-group">
+                    <label for="id" class="col-sm-2 control-label">ID</label>
+                    <div class="col-sm-7">
+                        <input type="number" class="form-control" name="id" placeholder="ID">
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <label for="nama_resep" class="col-sm-2 control-label">Nama Resep</label>
@@ -38,30 +47,23 @@
 
 
 
-        <div class="row">
+
+
+<div class="row">
+            {{#each data}}
             <div class="col-sm-6 col-md-4">
-                <a href="#">
+                <a href="/detail_resep?id={{id}}">
                     <div class="thumbnail" style="background-color:#dbe4ff">
                         <div class="caption">
-                            <h3 style="font-weight:bold">Gulai Kepala Ikan</h3>
-                            <p>by Nia</p>
+                            <h3 style="font-weight:bold">{{nama_resep}}</h3>
+                            <p style="margin-top:-10px">by{{penulis}}</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-sm-6 col-md-4">
-                <a href="#">
-                    <div class="thumbnail" style="background-color:#dbe4ff">
-                        <div class="caption">
-                            <h3 style="font-weight:bold">Empal Gepuk Surabaya</h3>
-                            <p>by Nia</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
+           {{/each}}
         </div>
 
-
-
+        <br/><br/><br/><br/><br/>
 
 </div> 
